--- a/Library.Core/Library.Core.csproj
+++ b/Library.Core/Library.Core.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Library.Infrastructure\Library.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Transaction\" />
+  </ItemGroup>
+
 </Project>
