--- a/Library.Core/Library.Core.csproj
+++ b/Library.Core/Library.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlSanitizer" Version="8.0.601" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
